Updating project for Linux work.